--- a/index.html
+++ b/index.html
@@ -8,45 +8,43 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #1a1a1a;
-      background-image: 
-        linear-gradient(45deg, rgba(255,255,255,0.03) 25%, transparent 25%),
-        linear-gradient(-45deg, rgba(255,255,255,0.03) 25%, transparent 25%),
-        linear-gradient(45deg, transparent 75%, rgba(255,255,255,0.03) 75%),
-        linear-gradient(-45deg, transparent 75%, rgba(255,255,255,0.03) 75%);
-      background-size: 40px 40px;
+      background-image: url("https://files.oaiusercontent.com/file-BC7C622FA09558B886D398D4");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       font-family: "Hiragino Mincho ProN", "Yu Mincho", serif;
-      color: #f5f5f5;
+      color: #fdfdfd;
       text-align: center;
       padding: 3rem 1rem;
     }
 
     h1 {
       font-size: 2.5rem;
-      color: #d4af37;
+      color: #f5e9d2;
       margin-bottom: 2rem;
-      text-shadow: 0 0 10px rgba(212, 175, 55, 0.3);
-      border-bottom: 2px solid #d4af37;
+      text-shadow: 0 0 12px rgba(255, 255, 255, 0.15);
+      background: rgba(0, 0, 0, 0.4);
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
       display: inline-block;
-      padding-bottom: 0.3rem;
     }
 
     a {
       display: block;
-      margin: 1.5rem auto;
+      margin: 1.2rem auto;
+      font-size: 1.4rem;
       text-decoration: none;
-      font-size: 1.5rem;
-      color: #ff6347; /* 和風の朱色 */
-      background-color: rgba(255,255,255,0.05);
+      color: #cba135;
+      background: rgba(0, 0, 0, 0.5);
       padding: 0.8rem 1.5rem;
-      border: 2px solid #ff6347;
+      border: 1px solid #cba135;
       border-radius: 10px;
-      width: fit-content;
       transition: all 0.3s ease;
+      width: fit-content;
     }
 
     a:hover {
-      background-color: #ff6347;
+      background: #cba135;
       color: #1a1a1a;
     }
 
@@ -54,6 +52,11 @@
       margin-top: 4rem;
       font-size: 0.9rem;
       color: #aaa;
+    }
+
+    @media screen and (max-width: 600px) {
+      h1 { font-size: 1.8rem; }
+      a { font-size: 1.2rem; padding: 0.6rem 1rem; }
     }
   </style>
 </head>
